--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/carlostrujilloneyra/Manage-Landing-page/issues"
   },
-  "homepage": "https://github.com/carlostrujilloneyra/Manage-Landing-page#readme",
-  "devDependencies": {
-    "sass": "^1.49.0"
-  }
+  "homepage": "https://github.com/carlostrujilloneyra/Manage-Landing-page#readme"
 }
